--- a/index.html
+++ b/index.html
@@ -19,7 +19,7 @@
 </head>
 
 <body>
-    <header class="container mx-auto my-5 w-10/12 lg:w-4/5">
+    <header class="container mx-auto my-5 md:w-4/5 lg:w-4/5">
         <!-- Navbar starts -->
         <nav>
             <div class="navbar bg-base-100">
@@ -62,14 +62,13 @@
         <!-- Navbar ends -->
 
         <!-- banner starts -->
-        <!-- <div class="mt-6">
-            <div class="hero rounded-[48px] h-[200px] lg:h-[500px] bg-no-repeat"
+        <div class="mt-6">
+            <div class="hero rounded-[48px] h-[200px] md:h-[300px] lg:h-[500px] bg-no-repeat"
                 style="background-image:linear-gradient(179deg, rgba(0, 193, 157, 0.00) -25.42%, rgba(2, 0, 67, 0.47) 107.11%), url('Images/Rectangle 5.png');">
                 <div class="hero-overlay bg-opacity-30 rounded-[48px]"></div>
             </div>
-        </div> -->
+        </div>
         <!-- banner ends -->
-
         
     </header>
 </body>
