--- a/index.html
+++ b/index.html
@@ -19,7 +19,7 @@
 </head>
 
 <body>
-    <div class="">
+    <div>
         <header class="container mx-auto my-5 md:w-4/5 lg:w-4/5">
             <!-- Navbar starts -->
             <nav>
@@ -73,13 +73,13 @@
 
             <!-- comprehensive care starts -->
             <div>
-                <h2 class="text-3xl md:text-3xl lg:text-4xl font-semibold mt-8 md:mt-6 lg:mt-6 text-center">
+                <h2 class="text-3xl md:text-3xl lg:text-5xl font-semibold mt-8 md:mt-6 lg:mt-6 lg:-mb-20 text-center">
                     Comprehensive Care <br> for Every Patient</h2>
             </div>
             <!-- cards -->
             <div class="flex flex-wrap justify-center lg:justify-between">
                 <div
-                    class="w-full lg:w-1/6 bg-[#FBFBFB] rounded-3xl border border-[#02004333] mb-4 mt-10 lg:-mt-30 h-64 lg:h-80">
+                    class="w-full lg:w-1/6 bg-[#FBFBFB] border border-[#02004333] rounded-3xl mb-4 lg:-mt-30 h-64 lg:h-80">
                     <div class="ml-6 mt-4">
                         <h3 class="text-4xl">90%</h3>
                         <p class="text-xl mt-2">Patient satisfaction rate, reflecting our commitment.</p>
@@ -131,7 +131,7 @@
 
         <main class="container mx-auto my-16 lg:w-4/5">
             <!-- About us start -->
-            <div class="hero">
+            <section class="hero">
                 <div class="hero-content flex-col lg:flex-row-reverse lg:gap-8">
                     <div>
                         <img src="Images/Rectangle 24.png" class="max-w-sm rounded-lg lg:ml-8" />
@@ -144,7 +144,7 @@
                         </div>
                     </div>
                     <div class="text-center mr-2 lg:text-start md:text-center md:mr-10 lg:mr-64">
-                        <p class="border border-black rounded-3xl bg-[#FFFFF5] p-2 mb-2 inline-block">Who we are</p>
+                        <p class="border border-[#4D4C7B] rounded-3xl bg-[#FFFFF5] p-2 mb-2 inline-block">Who we are</p>
                         <div
                             class="w-full lg:max-w-2xl lg:h-[296px] lg:gap-16 rounded-3xl bg-white p-4 mb-4 inline-block">
                             <h1 class="text-4xl font-bold text-[#020043]">We Help To Get <br>Solutions</h1>
@@ -161,15 +161,16 @@
                         </div>
                     </div>
                 </div>
-            </div>
+            </section>
             <!-- About us end -->
             <!-- service start -->
-            <div class="flex justify-center mt-14">
+            <section class="flex justify-center mt-14">
                 <div class="hero lg:w-[1356px] lg:h-[928px] rounded-xl border border-black">
                     <div class="hero-content p-4 flex-col justify-between items-center gap-4 lg:gap-6">
                         <div class="flex flex-col lg:flex-row justify-between items-center gap-4 lg:gap-8 w-full">
                             <div class="text-center lg:text-left lg:max-w-lg">
-                                <p class="border border-black rounded-3xl bg-[#FBFBFB] p-2 mb-2 inline-block">Service
+                                <p class="border border-[#4D4C7B] rounded-3xl bg-[#FBFBFB] p-2 mb-2 inline-block">
+                                    Service
                                 </p>
                                 <h3 class="text-3xl lg:text-4xl font-bold text-[#020043]">Empowering Health,
                                     <br>Enriching Lives
@@ -203,11 +204,12 @@
                             <div class="relative">
                                 <img src="Images/Rectangle 27-1.png"
                                     class="w-full rounded-lg lg:w-[624px] lg:h-[394px]">
-                                    <div
+                                <div
                                     class="flex-col justify-center items-center m-auto w-[68%] h-[47%] md:h-[35%] lg:w-[68%] lg:h-[35%] border border-black rounded-3xl text-white bg-[#343268] p-2 inline-block bg-opacity-60 absolute max-w-xs inset-0 mr-28 mt-36 md:mr-44 md:mt-56 lg:mr-56 lg:mt-56">
                                     <h4 class="text-xl font-bold">Online Doctor Meet</h4>
                                     <div class="flex justify-center">
-                                        <p class="text-sm mt-2">Our surgeons are trained in the latest robotic surgical techniques, which allow for greater precision</p>
+                                        <p class="text-sm mt-2">Our surgeons are trained in the latest robotic surgical
+                                            techniques, which allow for greater precision</p>
                                         <img src="Images/Group 28.svg" class="lg:w-[38px] lg:h-[38px] lg:mt-10">
                                     </div>
                                 </div>
@@ -218,7 +220,8 @@
                                     class="flex-col justify-center items-center m-auto w-[68%] h-[47%] md:h-[35%] lg:w-[68%] lg:h-[35%] border border-black rounded-3xl text-white bg-[#343268] p-2 inline-block bg-opacity-60 absolute max-w-xs inset-0 mr-28 mt-36 md:mr-44 md:mt-56 lg:mr-56 lg:mt-56">
                                     <h4 class="text-xl font-bold">Consultancy your health</h4>
                                     <div class="flex justify-center">
-                                        <p class="text-sm mt-2">Our surgeons are trained in the latest robotic surgical techniques, which allow for greater precision</p>
+                                        <p class="text-sm mt-2">Our surgeons are trained in the latest robotic surgical
+                                            techniques, which allow for greater precision</p>
                                         <img src="Images/Group 28.svg" class="lg:w-[38px] lg:h-[38px] lg:mt-10">
                                     </div>
                                 </div>
@@ -226,8 +229,183 @@
                         </div>
                     </div>
                 </div>
-            </div>
+            </section>
             <!-- service end -->
+            <!-- testimonial start -->
+            <section class="mt-28">
+                <div>
+                    <p class="border border-[#4D4C7B] rounded-3xl bg-[#FBFBFB] p-2 mb-2 inline-block">Testimonial</p>
+                    <h3 class="text-3xl lg:text-4xl font-bold text-[#020043]">What they say about us</h3>
+                </div>
+                <div>
+                    <div class="carousel w-full">
+                        <div id="test1" class="carousel-item w-full flex justify-center gap-4 mt-10">
+                            <div class="p-4 bg-[#FFFFF5] rounded-xl w-1/3 border border-black">
+                                <h2 class="text-2xl font-semibold">Expertise and Compassion Combined</h2>
+                                <p class="text-[#4D4C7B] text-xs mt-4">I can't thank enough for their exceptional care.
+                                    The
+                                    doctors and staff showed incredible expertise and compassion throughout my treatment
+                                    journey. I felt truly cared for every step of the way.</p>
+                                <div class="flex justify-start mt-4">
+                                    <img src="Images/Ellipse 10.svg">
+                                    <div>
+                                        <p class="font-bold">Sarah D, <span class="font-normal">IT Professional</span>
+                                        </p>
+                                        <div class="rating">
+                                            <input type="radio" name="rating-2"
+                                                class="mask mask-star-2 bg-yellow-400" />
+                                            <input type="radio" name="rating-2"
+                                                class="mask mask-star-2 bg-yellow-400" />
+                                            <input type="radio" name="rating-2"
+                                                class="mask mask-star-2 bg-yellow-400" />
+                                            <input type="radio" name="rating-2"
+                                                class="mask mask-star-2 bg-yellow-400" />
+                                            <input type="radio" name="rating-2"
+                                                class="mask mask-star-2 bg-yellow-400" />
+                                        </div>
+                                    </div>
+                                </div>
+                            </div>
+
+                            <div class="p-4 bg-[#FFFFF5] rounded-xl w-1/3 border border-black">
+                                <h2 class="text-2xl font-semibold">Life-Saving Care, Life-Changing Experience</h2>
+                                <p class="text-[#4D4C7B] text-xs mt-4">I can't thank enough for their exceptional care.
+                                    My experience at [Healthcare Provider Name] was life-changing. The prompt and
+                                    accurate diagnosis, coupled with the advanced treatments they provided, saved my
+                                    life.</p>
+                                <div class="flex justify-start mt-4">
+                                    <img src="Images/Ellipse 10 (1).svg">
+                                    <div>
+                                        <p class="font-bold">Michael R, <span class="font-normal">Business Executive</span>
+                                        </p>
+                                        <div class="rating">
+                                            <input type="radio" name="rating-2"
+                                                class="mask mask-star-2 bg-yellow-400" />
+                                            <input type="radio" name="rating-2"
+                                                class="mask mask-star-2 bg-yellow-400" />
+                                            <input type="radio" name="rating-2"
+                                                class="mask mask-star-2 bg-yellow-400" />
+                                            <input type="radio" name="rating-2"
+                                                class="mask mask-star-2 bg-yellow-400" />
+                                            <input type="radio" name="rating-2"
+                                                class="mask mask-star-2 bg-yellow-400" />
+                                        </div>
+                                    </div>
+                                </div>
+                            </div>
+
+                            <div class="p-4 bg-[#FFFFF5] rounded-xl w-1/3 border border-black">
+                                <h2 class="text-2xl font-semibold">A Partner in Health and
+                                    Wellness</h2>
+                                <p class="text-[#4D4C7B] text-xs mt-4">As a busy professional, I appreciate the
+                                    convenience and quality of care I receive at [Healthcare Provider Name]. From
+                                    telemedicine consultations to routine check-ups, they've become my trusted partner
+                                    in health and</p>
+                                <div class="flex justify-start mt-4">
+                                    <img src="Images/Ellipse 10 (2).svg">
+                                    <div>
+                                        <p class="font-bold">David S, <span class="font-normal">Lawyer</span>
+                                        </p>
+                                        <div class="rating">
+                                            <input type="radio" name="rating-2"
+                                                class="mask mask-star-2 bg-yellow-400" />
+                                            <input type="radio" name="rating-2"
+                                                class="mask mask-star-2 bg-yellow-400" />
+                                            <input type="radio" name="rating-2"
+                                                class="mask mask-star-2 bg-yellow-400" />
+                                            <input type="radio" name="rating-2"
+                                                class="mask mask-star-2 bg-yellow-400" />
+                                            <input type="radio" name="rating-2"
+                                                class="mask mask-star-2 bg-yellow-400" />
+                                        </div>
+                                    </div>
+                                </div>
+                            </div>
+                        </div>
+
+                        <div id="test2" class="carousel-item w-full flex justify-center gap-4 mt-10">
+                            <div class="p-4 bg-[#FFFFF5] rounded-xl w-1/3 border border-black">
+                                <h2 class="text-2xl font-semibold">Supportive and Skilled Staff</h2>
+                                <p class="text-[#4D4C7B] text-xs mt-4">The staff at [Healthcare Provider Name] is incredibly supportive and skilled. They always go the extra mile to ensure my well-being and comfort during every visit.</p>
+                                <div class="flex justify-start mt-4">
+                                    <img src="Images/Ellipse 10.svg">
+                                    <div>
+                                        <p class="font-bold">Amanda S., <span class="font-normal">Graphic Designer</span>
+                                        </p>
+                                        <div class="rating">
+                                            <input type="radio" name="rating-2"
+                                                class="mask mask-star-2 bg-yellow-400" />
+                                            <input type="radio" name="rating-2"
+                                                class="mask mask-star-2 bg-yellow-400" />
+                                            <input type="radio" name="rating-2"
+                                                class="mask mask-star-2 bg-yellow-400" />
+                                            <input type="radio" name="rating-2"
+                                                class="mask mask-star-2 bg-yellow-400" />
+                                            <input type="radio" name="rating-2"
+                                                class="mask mask-star-2 bg-yellow-400" />
+                                        </div>
+                                    </div>
+                                </div>
+                            </div>
+
+                            <div class="p-4 bg-[#FFFFF5] rounded-xl w-1/3 border border-black">
+                                <h2 class="text-2xl font-semibold">Comprehensive and Personalized Care</h2>
+                                <p class="text-[#4D4C7B] text-xs mt-4">I appreciate the comprehensive care provided at [Healthcare Provider Name]. They take the time to understand my needs and offer personalized treatment plans that work best for me.</p>
+                                <div class="flex justify-start mt-4">
+                                    <img src="Images/Ellipse 10 (1).svg">
+                                    <div>
+                                        <p class="font-bold">Michael, <span class="font-normal">Financial Analyst</span>
+                                        </p>
+                                        <div class="rating">
+                                            <input type="radio" name="rating-2"
+                                                class="mask mask-star-2 bg-yellow-400" />
+                                            <input type="radio" name="rating-2"
+                                                class="mask mask-star-2 bg-yellow-400" />
+                                            <input type="radio" name="rating-2"
+                                                class="mask mask-star-2 bg-yellow-400" />
+                                            <input type="radio" name="rating-2"
+                                                class="mask mask-star-2 bg-yellow-400" />
+                                            <input type="radio" name="rating-2"
+                                                class="mask mask-star-2 bg-yellow-400" />
+                                        </div>
+                                    </div>
+                                </div>
+                            </div>
+
+                            <div class="p-4 bg-[#FFFFF5] rounded-xl w-1/3 border border-black">
+                                <h2 class="text-2xl font-semibold">Exceptional Pediatric Care</h2>
+                                <p class="text-[#4D4C7B] text-xs mt-4">The pediatricians at [Healthcare Provider Name] are amazing. They are patient, caring, and always make sure my children feel comfortable during visits.</p>
+                                <div class="flex justify-start mt-4">
+                                    <img src="Images/Ellipse 10 (2).svg">
+                                    <div>
+                                        <p class="font-bold">Fedric, <span class="font-normal">Teacher</span>
+                                        </p>
+                                        <div class="rating">
+                                            <input type="radio" name="rating-2"
+                                                class="mask mask-star-2 bg-yellow-400" />
+                                            <input type="radio" name="rating-2"
+                                                class="mask mask-star-2 bg-yellow-400" />
+                                            <input type="radio" name="rating-2"
+                                                class="mask mask-star-2 bg-yellow-400" />
+                                            <input type="radio" name="rating-2"
+                                                class="mask mask-star-2 bg-yellow-400" />
+                                            <input type="radio" name="rating-2"
+                                                class="mask mask-star-2 bg-yellow-400" />
+                                        </div>
+                                    </div>
+                                </div>
+                            </div>
+                        </div>
+                    </div>
+
+                    <div class="flex justify-center w-full py-2 gap-2">
+                        <a href="#test2" class="dot w-3 h-3 bg-gray-500 active:bg-yellow-500 rounded-full"></a>
+                        <a href="#test1" class="dot w-3 h-3 bg-gray-500 active:bg-yellow-500 rounded-full"></a>
+                        <a href="#test2" class="dot w-3 h-3 bg-gray-500 active:bg-yellow-500 rounded-full"></a>
+                    </div>
+                </div>
+            </section>
+            <!-- testimonial ends -->
         </main>
     </div>
 
