--- a/index.html
+++ b/index.html
@@ -276,7 +276,8 @@
                                 <div class="flex justify-start mt-4">
                                     <img src="Images/Ellipse 10 (1).svg">
                                     <div>
-                                        <p class="font-bold">Michael R, <span class="font-normal">Business Executive</span>
+                                        <p class="font-bold">Michael R, <span class="font-normal">Business
+                                                Executive</span>
                                         </p>
                                         <div class="rating">
                                             <input type="radio" name="rating-2"
@@ -326,11 +327,14 @@
                         <div id="test2" class="carousel-item w-full flex justify-center gap-4 mt-10">
                             <div class="p-4 bg-[#FFFFF5] rounded-xl w-1/3 border border-black">
                                 <h2 class="text-2xl font-semibold">Supportive and Skilled Staff</h2>
-                                <p class="text-[#4D4C7B] text-xs mt-4">The staff at [Healthcare Provider Name] is incredibly supportive and skilled. They always go the extra mile to ensure my well-being and comfort during every visit.</p>
+                                <p class="text-[#4D4C7B] text-xs mt-4">The staff at [Healthcare Provider Name] is
+                                    incredibly supportive and skilled. They always go the extra mile to ensure my
+                                    well-being and comfort during every visit.</p>
                                 <div class="flex justify-start mt-4">
                                     <img src="Images/Ellipse 10.svg">
                                     <div>
-                                        <p class="font-bold">Amanda S., <span class="font-normal">Graphic Designer</span>
+                                        <p class="font-bold">Amanda S., <span class="font-normal">Graphic
+                                                Designer</span>
                                         </p>
                                         <div class="rating">
                                             <input type="radio" name="rating-2"
@@ -350,7 +354,9 @@
 
                             <div class="p-4 bg-[#FFFFF5] rounded-xl w-1/3 border border-black">
                                 <h2 class="text-2xl font-semibold">Comprehensive and Personalized Care</h2>
-                                <p class="text-[#4D4C7B] text-xs mt-4">I appreciate the comprehensive care provided at [Healthcare Provider Name]. They take the time to understand my needs and offer personalized treatment plans that work best for me.</p>
+                                <p class="text-[#4D4C7B] text-xs mt-4">I appreciate the comprehensive care provided at
+                                    [Healthcare Provider Name]. They take the time to understand my needs and offer
+                                    personalized treatment plans that work best for me.</p>
                                 <div class="flex justify-start mt-4">
                                     <img src="Images/Ellipse 10 (1).svg">
                                     <div>
@@ -374,7 +380,9 @@
 
                             <div class="p-4 bg-[#FFFFF5] rounded-xl w-1/3 border border-black">
                                 <h2 class="text-2xl font-semibold">Exceptional Pediatric Care</h2>
-                                <p class="text-[#4D4C7B] text-xs mt-4">The pediatricians at [Healthcare Provider Name] are amazing. They are patient, caring, and always make sure my children feel comfortable during visits.</p>
+                                <p class="text-[#4D4C7B] text-xs mt-4">The pediatricians at [Healthcare Provider Name]
+                                    are amazing. They are patient, caring, and always make sure my children feel
+                                    comfortable during visits.</p>
                                 <div class="flex justify-start mt-4">
                                     <img src="Images/Ellipse 10 (2).svg">
                                     <div>
@@ -406,6 +414,52 @@
                 </div>
             </section>
             <!-- testimonial ends -->
+            <!-- FAQ start -->
+            <section class="mt-28">
+                <div>
+                    <p class="border border-[#4D4C7B] rounded-3xl bg-[#FBFBFB] p-2 mb-2 inline-block">FAQ</p>
+                    <h3 class="text-3xl lg:text-4xl font-bold text-[#020043]">Frequntly Asked Question</h3>
+                </div>
+               <div>
+                <div class="collapse collapse-arrow bg-[#FFFFF5] mt-10 border border-black">
+                    <input type="radio" name="my-accordion-2"/>
+                    <div class="collapse-title text-xl font-medium">What are your office hours?</div>
+                    <div class="collapse-content">
+                        <p class="text-[#343268]">Our office hours vary by location, but typically we are open Monday through Friday from 8:00 AM to 5:00 PM. Some locations may offer extended hours or weekend appointments. Please contact your nearest clinic for specific hours.</p>
+                    </div>
+                </div>
+                <div class="collapse collapse-arrow bg-[#FFFFF5] mt-10 border border-black">
+                    <input type="radio" name="my-accordion-2"/>
+                    <div class="collapse-title text-xl font-medium">How can I schedule an appointment?</div>
+                    <div class="collapse-content">
+                        <p class="text-[#343268]">You can schedule an appointment by visiting our website and using our online booking system. Alternatively, you can call our office at [phone number] during business hours to speak with our scheduling team.</p>
+                    </div>
+                </div>
+                <div class="collapse collapse-arrow bg-[#FFFFF5] mt-10 border border-black">
+                    <input type="radio" name="my-accordion-2"/>
+                    <div class="collapse-title text-xl font-medium">Do you accept insurance?</div>
+                    <div class="collapse-content">
+                        <p class="text-[#343268]">Yes, we accept a variety of insurance plans. Please contact us or check with your insurance provider to verify coverage and any out-of-pocket costs.</p>
+                    </div>
+                </div>
+                <div class="collapse collapse-arrow bg-[#FFFFF5] mt-10 border border-black">
+                    <input type="radio" name="my-accordion-2"/>
+                    <div class="collapse-title text-xl font-medium">What should I bring to my appointment?</div>
+                    <div class="collapse-content">
+                        <p class="text-[#343268]">
+                            Please bring your insurance card(s), photo ID (such as driver's license or passport), list of current medications, any relevant medical records or test results, and co-payment or deductible payment if applicable to your appointment.</p>
+                    </div>
+                </div>
+                <div class="collapse collapse-arrow bg-[#FFFFF5] mt-10 border border-black">
+                    <input type="radio" name="my-accordion-2"/>
+                    <div class="collapse-title text-xl font-medium">Do you offer telemedicine appointments?</div>
+                    <div class="collapse-content">
+                        <p class="text-[#343268]">Yes, we offer telemedicine appointments for certain types of visits. To schedule a telemedicine appointment, please mention your preference when scheduling, or inquire about telemedicine options during your call.</p>
+                    </div>
+                </div>
+               </div>
+            </section>
+            <!-- FAQ ends -->
         </main>
     </div>
 
