discount banner/last banner section added

--- a/index.html
+++ b/index.html
@@ -420,46 +420,85 @@
                     <p class="border border-[#4D4C7B] rounded-3xl bg-[#FBFBFB] p-2 mb-2 inline-block">FAQ</p>
                     <h3 class="text-3xl lg:text-4xl font-bold text-[#020043]">Frequntly Asked Question</h3>
                 </div>
-               <div>
-                <div class="collapse collapse-arrow bg-[#FFFFF5] mt-10 border border-black">
-                    <input type="radio" name="my-accordion-2"/>
-                    <div class="collapse-title text-xl font-medium">What are your office hours?</div>
-                    <div class="collapse-content">
-                        <p class="text-[#343268]">Our office hours vary by location, but typically we are open Monday through Friday from 8:00 AM to 5:00 PM. Some locations may offer extended hours or weekend appointments. Please contact your nearest clinic for specific hours.</p>
+                <div>
+                    <div class="collapse collapse-arrow bg-[#FFFFF5] mt-10 border border-black">
+                        <input type="radio" name="my-accordion-2" />
+                        <div class="collapse-title text-xl font-medium">What are your office hours?</div>
+                        <div class="collapse-content">
+                            <p class="text-[#343268]">Our office hours vary by location, but typically we are open
+                                Monday through Friday from 8:00 AM to 5:00 PM. Some locations may offer extended hours
+                                or weekend appointments. Please contact your nearest clinic for specific hours.</p>
+                        </div>
+                    </div>
+                    <div class="collapse collapse-arrow bg-[#FFFFF5] mt-10 border border-black">
+                        <input type="radio" name="my-accordion-2" />
+                        <div class="collapse-title text-xl font-medium">How can I schedule an appointment?</div>
+                        <div class="collapse-content">
+                            <p class="text-[#343268]">You can schedule an appointment by visiting our website and using
+                                our online booking system. Alternatively, you can call our office at [phone number]
+                                during business hours to speak with our scheduling team.</p>
+                        </div>
+                    </div>
+                    <div class="collapse collapse-arrow bg-[#FFFFF5] mt-10 border border-black">
+                        <input type="radio" name="my-accordion-2" />
+                        <div class="collapse-title text-xl font-medium">Do you accept insurance?</div>
+                        <div class="collapse-content">
+                            <p class="text-[#343268]">Yes, we accept a variety of insurance plans. Please contact us or
+                                check with your insurance provider to verify coverage and any out-of-pocket costs.</p>
+                        </div>
+                    </div>
+                    <div class="collapse collapse-arrow bg-[#FFFFF5] mt-10 border border-black">
+                        <input type="radio" name="my-accordion-2" />
+                        <div class="collapse-title text-xl font-medium">What should I bring to my appointment?</div>
+                        <div class="collapse-content">
+                            <p class="text-[#343268]">
+                                Please bring your insurance card(s), photo ID (such as driver's license or passport),
+                                list of current medications, any relevant medical records or test results, and
+                                co-payment or deductible payment if applicable to your appointment.</p>
+                        </div>
+                    </div>
+                    <div class="collapse collapse-arrow bg-[#FFFFF5] mt-10 border border-black">
+                        <input type="radio" name="my-accordion-2" />
+                        <div class="collapse-title text-xl font-medium">Do you offer telemedicine appointments?</div>
+                        <div class="collapse-content">
+                            <p class="text-[#343268]">Yes, we offer telemedicine appointments for certain types of
+                                visits. To schedule a telemedicine appointment, please mention your preference when
+                                scheduling, or inquire about telemedicine options during your call.</p>
+                        </div>
                     </div>
                 </div>
-                <div class="collapse collapse-arrow bg-[#FFFFF5] mt-10 border border-black">
-                    <input type="radio" name="my-accordion-2"/>
-                    <div class="collapse-title text-xl font-medium">How can I schedule an appointment?</div>
-                    <div class="collapse-content">
-                        <p class="text-[#343268]">You can schedule an appointment by visiting our website and using our online booking system. Alternatively, you can call our office at [phone number] during business hours to speak with our scheduling team.</p>
-                    </div>
-                </div>
-                <div class="collapse collapse-arrow bg-[#FFFFF5] mt-10 border border-black">
-                    <input type="radio" name="my-accordion-2"/>
-                    <div class="collapse-title text-xl font-medium">Do you accept insurance?</div>
-                    <div class="collapse-content">
-                        <p class="text-[#343268]">Yes, we accept a variety of insurance plans. Please contact us or check with your insurance provider to verify coverage and any out-of-pocket costs.</p>
-                    </div>
-                </div>
-                <div class="collapse collapse-arrow bg-[#FFFFF5] mt-10 border border-black">
-                    <input type="radio" name="my-accordion-2"/>
-                    <div class="collapse-title text-xl font-medium">What should I bring to my appointment?</div>
-                    <div class="collapse-content">
-                        <p class="text-[#343268]">
-                            Please bring your insurance card(s), photo ID (such as driver's license or passport), list of current medications, any relevant medical records or test results, and co-payment or deductible payment if applicable to your appointment.</p>
-                    </div>
-                </div>
-                <div class="collapse collapse-arrow bg-[#FFFFF5] mt-10 border border-black">
-                    <input type="radio" name="my-accordion-2"/>
-                    <div class="collapse-title text-xl font-medium">Do you offer telemedicine appointments?</div>
-                    <div class="collapse-content">
-                        <p class="text-[#343268]">Yes, we offer telemedicine appointments for certain types of visits. To schedule a telemedicine appointment, please mention your preference when scheduling, or inquire about telemedicine options during your call.</p>
-                    </div>
-                </div>
-               </div>
             </section>
             <!-- FAQ ends -->
+            <!-- Discount banner start -->
+            <section class="mt-28 relative">
+                <div class="hero rounded-[48px] h-[200px] md:h-[300px] lg:h-[500px] bg-no-repeat"
+                    style="background-image:radial-gradient(648.07% 142.88% at 98.23% 78.35%, #020043 0%, rgba(2, 0, 67, 0.30) 40%), url('Images/Rectangle 32.png');;">
+                    <div
+                        class="hero-overlay bg-gradient-to-tr from-transparent to-[rgba(2, 0, 67, 0.6)] rounded-[48px]">
+                    </div>
+                    <img src="Images/logo light.png" class="mb-96 ml-[900px]">
+                    <div
+                        class="hero-content text-neutral-content text-left px-6 lg:px-12 absolute inset-0 flex items-center justify-start">
+                        <div class="max-w-md text-white">
+                            <h1 class="mb-5 text-5xl font-bold">Get Your First Appointment at 50% Off!</h1>
+                            <div class="">
+                                <button
+                                    class="btn bg-amber-400 border-amber-400 font-bold hover:bg-amber-600 mt-6">Appointment
+                                    <img src="Images/Arrow 1.svg">
+                                </button>
+                                <button
+                                    class="btn bg-transparent text-white font-bold hover:bg-amber-600 mt-6 ml-4">Learn
+                                    More
+                                    <img src="Images/Arrow 1 (1).svg">
+                                </button>
+                            </div>
+                        </div>
+                    </div>
+                </div>
+            </section>
+            <!-- Discount banner end -->
+
+
         </main>
     </div>
 
