footer section added

--- a/index.html
+++ b/index.html
@@ -471,10 +471,10 @@
             <!-- FAQ ends -->
             <!-- Discount banner start -->
             <section class="mt-28 relative">
-                <div class="hero rounded-[48px] h-[200px] md:h-[300px] lg:h-[500px] bg-no-repeat"
+                <div class="hero rounded-[48px] h-[200px] md:h-[200px] lg:h-[500px] bg-no-repeat"
                     style="background-image:radial-gradient(648.07% 142.88% at 98.23% 78.35%, #020043 0%, rgba(2, 0, 67, 0.30) 40%), url('Images/Rectangle 32.png');;">
                     <div
-                        class="hero-overlay bg-gradient-to-tr from-transparent to-[rgba(2, 0, 67, 0.6)] rounded-[48px]">
+                        class="hero-overlay h-[100px] md:h-[200px] lg:h-[500px] bg-gradient-to-tr from-transparent to-[rgba(2, 0, 67, 0.6)] rounded-[48px]">
                     </div>
                     <img src="Images/logo light.png" class="mb-96 ml-[900px]">
                     <div
@@ -497,9 +497,49 @@
                 </div>
             </section>
             <!-- Discount banner end -->
-
-
         </main>
+
+        <footer class="footer font-manrope p-10 lg:p-24 bg-[#020043] text-[#ffffff99] text-base-content">
+
+            <div class="gap-5 text-center lg:text-left">
+                <img src="Images/logo light.png" alt="">
+                <p>123 Main Street Anytown, USA <br>Postal Code: 12345</p>
+                <div class="ml-10 lg:ml-0">
+                    <p>Support: support@oyolloo.com</p>
+                    <p>(Available : 10:00am to 07:00pm)</p>
+                </div>
+            </div>
+
+            <div class="flex gap-10 text-center lg:text-left">
+                <div class="grid grid-cols-1 lg:px-20 gap-5 lg:gap-4">
+                    <a class="link link-hover">Home</a>
+                    <a class="link link-hover ">About us</a>
+                    <a class="link link-hover">Success Page</a>
+                    <a class="link link-hover">Terms and Condition</a>
+                </div>
+
+                <div class="grid grid-cols-1 gap-5 lg:gap-4">
+                    <a class="link link-hover">Services</a>
+                    <a class="link link-hover">Scheduling</a>
+                    <a class="link link-hover">Contact Us</a>
+                    <a class="link link-hover">Patient Portal</a>
+                </div>
+            </div>
+
+            <div class="gap-5 text-center lg:text-left">
+                <p>Follow Us</p>
+                <div class="mt-6 flex justify-center gap-8">
+                    <i class="fa-brands fa-twitter text-2xl"></i>
+                    <i class="fa-brands fa-facebook text-2xl"></i>
+                    <i class="fa-brands fa-instagram text-2xl"></i>
+                    <i class="fa-brands fa-github text-2xl"></i>
+                </div>
+                <div class="ml-10 lg:ml-0">
+                    <p>@Docplus 2024</p>
+                </div>
+            </div>
+
+        </footer>
     </div>
 
 </body>
