--- a/index.html
+++ b/index.html
@@ -5,7 +5,7 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>HealthCare</title>
-
+    <link rel="shortcut icon" href="Images/icon.webp" type="image/x-icon">
     <script src="https://kit.fontawesome.com/2a021c0b1c.js" crossorigin="anonymous"></script>
 
     <link href="https://cdn.jsdelivr.net/npm/daisyui@4.12.10/dist/full.min.css" rel="stylesheet" type="text/css" />
@@ -18,8 +18,7 @@
     </style>
 </head>
 
-<body>
-    <div class="gradient-background">
+<body class="gradient-background">
         <header class="container mx-auto my-5 md:w-4/5 lg:w-4/5">
             <!-- Navbar starts -->
             <nav>
@@ -540,6 +539,5 @@
             </div>
 
         </footer>
-    </div>
 </body>
 </html>
